--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,10 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<skipTests>true</skipTests>
 	</properties>
+	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -72,6 +75,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
     <groupId>com.h2database</groupId>
     <artifactId>h2</artifactId>
