--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,14 @@ spring.application.name=rudrakshafinance
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.h2.console.enabled=true
 
+#spring.datasource.url=mysql://MYSQLUSER:MYSQL_ROOT_PASSWORD@containers-us-west-14.railway.app:port/MYSQL_DATABASE
+#spring.datasource.username=MYSQLUSER
+#spring.datasource.password=MYSQL_ROOT_PASSWORD
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.datasource.url=jdbc:mysql://sql7.freesqldatabase.com:3306/sql7783625
 spring.datasource.username=sql7783625
-spring.datasource.password=your-password
+spring.datasource.password=QPF7I174Mz
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Optional JPA config
