--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# Optional HikariCP tuning to avoid too many connections
+spring.datasource.hikari.maximum-pool-size=1
+spring.datasource.hikari.minimum-idle=0
+
 application.port= 8080;
